--- a/api/package.json
+++ b/api/package.json
@@ -16,16 +16,27 @@
   ],
   "author": "Rohit Kilpadi",
   "license": "MIT",
+  "homepage": "https://gitlab.com/medhved/pustak#readme",
+  "bugs": {
+    "url": "https://gitlab.com/medhved/pustak/issues",
+    "email": "incoming+medhved/pustak@incoming.gitlab.com"
+  },
+  "repository": "gitlab:medhved/pustak",
   "dependencies": {
     "config": "^1.30.0",
     "hapi": "^17.5.0",
     "hapi-swagger": "^9.1.1",
     "inert": "^5.1.0",
+    "joi": "^13.3.0",
+    "save": "^2.3.2",
+    "sequelize": "^4.37.10",
+    "sqlite": "^2.9.2",
     "vision": "^5.3.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0",
     "mocha": "^5.2.0"
