--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,11 @@
         "@angular/platform-browser": "^6.0.0",
         "@angular/platform-browser-dynamic": "^6.0.0",
         "@angular/router": "^6.0.0",
+        "@fortawesome/angular-fontawesome": "^0.1.1",
+        "@fortawesome/fontawesome-svg-core": "^1.2.0",
+        "@fortawesome/free-brands-svg-icons": "^5.1.0",
+        "@fortawesome/free-regular-svg-icons": "^5.1.0",
+        "@fortawesome/free-solid-svg-icons": "^5.1.0",
         "core-js": "^2.5.4",
         "hammerjs": "^2.0.8",
         "rxjs": "^6.0.0",
